--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,20 +2,16 @@
 
 	<div class="ui text container">
 		<div class="ui huge header">Register</div>
-		<form class="ui form">
+		<form class="ui form" method="POST" action="/register">
 			<div class="field">
 				<label>Username</label>
 				<input type="text" name="username" placeholder="Username"/>
 			</div>
 			<div class="field">
-				<label>Email</label>
-				<input type="text" name="email" placeholder="Email"/>
-			</div>
-			<div class="field">
 				<label>Password</label>
 				<input type="password" name="password" placeholder="Password"/>
 			</div>
-			<button class="ui button" type="submit">Submit</button>
+			<button class="ui green button" type="submit">Submit</button>
 		</form>
 	</div>
 <% include partials/footer %>
