setup passport and login router

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
 	<% if (error && error.length > 0) { %>
 		<div class="ui warning message">
 			<div class="header">
-				<%= error[0] %>
+				<%= error %>
 			</div>
 		</div>
 	<% } %>
@@ -24,7 +24,7 @@
 	<% if (success && success.length > 0) {%>
 		<div class="ui success message">
 			<div class="header">
-				<%= success[0] %>
+				<%= success %>
 			</div>
 		</div>
 	<% } %>
