--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <% include partials/header %>
 
-	<div class="ui text container">
+	<div class="ui text container context">
 		<div class="ui huge header">Login</div>
 		<form class="ui form" method="POST" action="/login">
 			<div class="field">
