--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,6 @@
 <% include partials/header %>
 
-	<div class="ui text container">
+	<div class="ui text container context">
 		<div class="ui huge header">Register</div>
 		<form class="ui form" method="POST" action="/register">
 			<div class="field">
