--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -1,7 +1,7 @@
 <% include partials/header %>
     <div class="ui text container context">
         <div class="ui huge header">Create New Post</div>
-		<form class="ui form" method="POST" action="/login">
+		<form class="ui form" method="POST" action="/post/new">
 			<div class="field">
 				<label>Title</label>
 				<input type="text" name="title" placeholder="Title"/>
