--- a/views/editpost.ejs
+++ b/views/editpost.ejs
@@ -14,7 +14,7 @@
             </div>
             <div class="field">
                 <label for="title">Content</label>
-                <textarea cols="30" rows="10"><%- post.body %></textarea>
+                <textarea cols="30" rows="10" name="body"><%- post.body %></textarea>
             </div>
             <button class="ui inverted green button">Submit</button>
         </form>
