--- a/views/showpost.ejs
+++ b/views/showpost.ejs
@@ -12,7 +12,20 @@
                 </div>
                 <% if (currentUser && post.userId.equals(currentUser._id)) {%>
                     <a class="ui orange button" href="/post/<%= post._id %>/edit">Edit post</a>
+                    <form action="/post/<%= post._id %>/delete" method="POST">
+                        <button class="ui red button" type="submit">Delete</button>
+                    </form>
                 <% } %>
+            </div>
+            <div class="ui comments">
+                <form class="ui reply form" action="/post/<%= post._id%>/comments" method="POST">
+                    <div class="field">
+                        <textarea name="text"></textarea>
+                    </div>
+                    <button type="submit" class="ui blue labeled submit icon button">
+                        <i class="icon edit"></i> Add Reply
+                    </button>
+                </form>
             </div>
         </div>
     </div>
