--- a/views/showpost.ejs
+++ b/views/showpost.ejs
@@ -18,7 +18,32 @@
                 <% } %>
             </div>
             <div class="ui comments">
-                <form class="ui reply form" action="/post/<%= post._id%>/comments" method="POST">
+                <h3 class="ui dividing header">Comments</h3>
+                <% post.comments.forEach(function (comment) { %>
+                    <div class="comment">
+                        <div class="content">
+                            <a class="author"><%= comment.author.username %></a>
+                            <div class="metadata">
+                                <span class="date"><%= comment.createdAt.toDateString() %></span>
+                            </div>
+                            <div class="text">
+                                <%= comment.text %>
+                            </div>
+                            <% if (currentUser && comment.author.id.equals(currentUser._id)) { %>
+                                <form 
+                                    method="POST"
+                                    action="/post/<%= post.id %>/comments/<%= comment._id %>">
+                                    <div class="actions">
+                                        <button type="submit" class="ui red button">
+                                            Delete comment
+                                        </button>
+                                    </div>
+                                </form>
+                            <% } %>
+                        </div>
+                    </div>
+                <% }) %>
+                <form class="ui reply form" action="/post/<%= post._id %>/comments" method="POST">
                     <div class="field">
                         <textarea name="text"></textarea>
                     </div>
